tests/snapshots/spanshot_request@13477987312032569302.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: stateless
  request: "&[[&x]]: &[&mut [T]]"
---
&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// Applying rule `Deref`
&x @ (&mut (*(*p).0).0 as &_): &T
// Applying rule `Deref`
x @ *(&mut (*(*p).0).0 as &_): T

// Final bindings (simplified):
let x: T = *&mut (*(*p).0).0 // Borrow-check error: MutBorrowBehindSharedBorrow
