tests/snapshots/spanshot_request@13623103449770796081.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[&&mut x]: &[&mut T]`

[&&mut x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&&mut x @ &(*p).0: &&mut T
// Applying rule `Deref`
&mut x @ *&(*p).0: &mut T
// Applying rule `Deref`
x @ **&(*p).0: T

// Final bindings:
let x: T = **&(*p).0
