tests/snapshots/spanshot_request@14013267688451896328.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[&x]: &[&mut T]`

[&x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&mut T
// Applying rule `Deref`
x @ *&(*p).0: &mut T

// Final bindings:
let x: &mut T = *&(*p).0
